syntax = "proto3";

message PingRequest {

}

message PingResponse {
    string message = 1;
    string server_name = 2;
}

message FibonacciRequest{
    int32 number = 1;
}

message FibonacciResponse{
    double number = 1;
    string server_name = 2;
}

service Calculations {
    rpc Fibonacci(FibonacciRequest) returns (FibonacciResponse) {}
    rpc Ping(PingRequest) returns (PingResponse) {}
}
